apps/annotater/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annotater-web
  labels:
    app: annotater-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: annotater-web
  template:
    metadata:
      labels:
        app: annotater-web
    spec:
      containers:
        - name: annotater-web
          image: gbifnorway/annotater:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
