apps/annotater/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: annotater-web
  labels:
    app: annotater-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 8080
  selector:
    app: annotater-web
