apps/annotater/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotater-web
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - host: annotater.svc.gbif.no
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: annotater-web
                port:
                  number: 80
  tls:
    - hosts:
        - annotater.svc.gbif.no
      secretName: annotater-web-tls
